cron_auth path added to config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,6 +156,7 @@ jobs:
           paths:
             - ./accounts
             - ./adminrestrict
+            - ./cron_auth
             - ./.git
             - ./shell
             - ./google_helpers
