--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-requests==2.20.0
-django==3.2.13
+requests==2.28.2
+django==4.1.7
 PyYAML==5.4
 mysqlclient==2.0.1
 WebOb==1.5.0
 ecdsa==0.13.3
 httplib2==0.19.0
-google-api-python-client==1.12.8
+google-api-python-client==2.81.0
 python-openid==2.2.5
 pyasn1==0.4.6
-pytz==2018.4
-requests-oauthlib==0.7.0
+pytz==2022.7.1
+requests-oauthlib==1.3.1
 rsa==4.7
 simplejson==3.8.1
 six==1.13.0
@@ -23,12 +23,12 @@ pyjwt==1.6.1
 django-finalware==1.0.0
 cryptography==3.3.2
 future==0.18.3
-google-cloud-storage==2.7.0
+google-cloud-storage==1.18.0
 django-session-security==2.6.5
 django-anymail[mailgun]
 django-axes==5.20.0
 django-redis==5.0.0
-xhtml2pdf==0.2.9
+xhtml2pdf
 
 
 # If you are seeing an error about django-debug-toolbar not being installed,
