--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ six==1.13.0
 uritemplate==3.0.0
 django-dotenv==1.4.2
 django-allauth==0.41.0
+django-two-factor-auth==1.15.1
 pexpect==4.0.1
 jsonschema==2.6.0
 oauth2client==3.0.0
@@ -30,6 +31,7 @@ django-anymail[mailgun]
 django-axes==5.20.0
 django-redis==5.0.0
 xhtml2pdf
+
 
 
 
