--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-requests==2.20.0
+requests==2.29.0
 django==3.2.18
 PyYAML==5.4
 pyOpenSSL==23.1.1
@@ -18,6 +18,7 @@ uritemplate==3.0.0
 django-dotenv==1.4.2
 django-allauth==0.41.0
 django-two-factor-auth==1.15.1
+phonenumbers==8.13.11
 pexpect==4.0.1
 jsonschema==2.6.0
 oauth2client==3.0.0
