--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ uritemplate==3.0.0
 django-dotenv==1.4.2
 django-allauth==0.54.0
 django-two-factor-auth==1.15.2
+phonenumbers==8.13.11
 pexpect==4.0.1
 jsonschema==2.6.0
 oauth2client==3.0.0
