--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,10 @@ cryptography==41.0.4
 future==0.18.3
 google-cloud-storage==2.9.0
 django-session-security==2.6.5
-django-anymail[mailgun]
+django-anymail[mailgun]==10.1
 django-axes==5.20.0
 django-redis==5.0.0
-xhtml2pdf==0.2.13
+xhtml2pdf==0.2.10
 
 # If you are seeing an error about django-debug-toolbar not being installed,
 # the problem is almost certainly that your developer .env wasn't found
