--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.31.0
-django==3.2.20
+django==3.2.23
 PyYAML==6.0.1
 pyOpenSSL==23.2.0
 mysqlclient==2.0.1
@@ -24,20 +24,19 @@ jsonschema==2.6.0
 oauth2client==3.0.0
 pyjwt==2.4.0
 django-finalware==1.0.0
-cryptography==41.0.2
+cryptography==41.0.6
 future==0.18.3
 google-cloud-storage==2.9.0
 django-session-security==2.6.5
-django-anymail[mailgun]
+django-anymail[mailgun]==10.1
 django-axes==5.20.0
 django-redis==5.0.0
-xhtml2pdf
+xhtml2pdf==0.2.10
 
 # If you are seeing an error about django-debug-toolbar not being installed,
 # the problem is almost certainly that your developer .env wasn't found
 # django-debug-toolbar should **only** be installed on local developer builds, so do
 # not add it to this file.
-
+#
 # If you are seeing an error about setuptools, the error is likely in your
 # VM's build. Do not correct it with changes to requirements.txt!
-
