--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -41,14 +41,14 @@ jobs:
         pip install -r requirements.txt
 
     # Set up environment variables
-    - name: Set environment variables
-      run: |
-        # Your environment variable setup logic here
+    # - name: Set environment variables
+    #   run: |
+    #     # Your environment variable setup logic here
 
-    # Run tests
-    - name: Run tests
-      run: |
-        # Your test script here
+    # # Run tests
+    # - name: Run tests
+    #   run: |
+    #     # Your test script here
 
     # Upload artifacts
     - name: Upload artifacts
@@ -79,7 +79,14 @@ jobs:
           json
           .env
           version.env
-
+        
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v1'
+          
+      with:
+        project_id: ${{ secrets.GCP_DEV_PROJECT_ID}}
+        workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER}}
 
   deploy:
     permissions:
@@ -102,17 +109,17 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-        service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
+        workload_identity_provider: 
+        service_account: 
 
-    # Deploy to App Engine
-    - name: Deploy to App Engine
-      id: 'deploy'
-      uses: 'google-github-actions/deploy-appengine@v2'
-      with:
-        build_env_vars: |-
-          FOO=bar
-          ZIP=zap
-        env_vars: |-
-          FOO=bar
-          ZIP=zap
+    # # Deploy to App Engine
+    # - name: Deploy to App Engine
+    #   id: 'deploy'
+    #   uses: 'google-github-actions/deploy-appengine@v2'
+    #   with:
+    #     build_env_vars: |-
+    #       FOO=bar
+    #       ZIP=zap
+    #     env_vars: |-
+    #       FOO=bar
+    #       ZIP=zap
