--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -14,6 +14,9 @@ env:
 
 jobs:
   build:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     runs-on: ubuntu-latest
     services:
       mysql:
