--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -118,15 +118,13 @@ jobs:
         workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER}}
         service_account: ${{ secrets.SA_DEPLOYER}}
 
-
-    # Deploy to App Engine
-    - name: Deploy to App Engine
-      id: 'deploy'
+    - id: 'deploy'
       uses: 'google-github-actions/deploy-appengine@v2'
+      env:
+        CLOUDSDK_APP_CLOUD_BUILD_TIMEOUT: 1800 # 30 minutes
       with:
-        build_env_vars: |-
-          FOO=bar
-          ZIP=zap
-        env_vars: |-
-          FOO=bar
-          ZIP=zap
+        project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
+        deliverables: app.yml
+      
+    
+       
