--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -126,6 +126,7 @@ jobs:
       with:
         project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
         working_directory: ${{ github.workspace }}
+        deliverables: app-dev.yml
         
       
     
