--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -112,17 +112,12 @@ jobs:
 
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v1'
-          
+      uses: 'google-github-actions/auth@v1'  
       with:
         project_id: ${{ secrets.GCP_DEV_PROJECT_ID}}
         workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER}}
         service_account: ${{ secrets.SA_DEPLOYER}}
 
-    
-    - name: check working directory files
-      run: |
-        ls -l  ${{ github.workspace }}
 
     - id: 'deploy'
       uses: 'google-github-actions/deploy-appengine@v2'
@@ -133,7 +128,8 @@ jobs:
         project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
         working_directory: ${{ github.workspace }}
         deliverables: app-dev.yaml
-        
+        flags: "--service-account=${{secrets.SA_DEPLOYER}}"
+      
       
     
        
