--- a/.github/workflows/testcxn.yml
+++ b/.github/workflows/testcxn.yml
@@ -25,8 +25,8 @@ jobs:
       uses: 'google-github-actions/auth@v1'
       with:
         token_format: 'access_token'
-        workload_identity_provider: projects/1073752893176/locations/global/workloadIdentityPools/dev-gh-wif-pool-sb/providers/github-provider
-        service_account: dev-gh-access-sa@nih-nci-cbiit-ctb-dev.iam.gserviceaccount.com
+        workload_identity_provider: projects/1073752893176/locations/global/workloadIdentityPools/github-pool/providers/github-provider
+        service_account: ctb-deployer2@nih-nci-cbiit-ctb-dev.iam.gserviceaccount.com
 
     # List the instances in the project
     - name: List Instances
