--- a/.github/workflows/testcxn.yml
+++ b/.github/workflows/testcxn.yml
@@ -33,4 +33,4 @@ jobs:
     # List the instances in the project
     - name: List Instances
       run: |-
-        gcloud storage ls --project $PROJECT_ID
+        gcloud compute instances list --project $PROJECT_ID
