--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -145,7 +145,7 @@ jobs:
         project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
         working_directory: ${{ github.workspace }}
         deliverables: app-dev.yaml
-        flags: "--log_level=debug"
+        # flags: "--log_level=debug"
       
       
     
