--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -134,7 +134,7 @@ jobs:
       with:
         base64-encoded-secret: ${{ secrets.CTB_DEV_SETTINGS }}
         filename: ".env"
-        working-directory: "ctb"
+        working-directory: "."
 
     - id: 'deploy'
       uses: 'google-github-actions/deploy-appengine@v2'
