--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -145,6 +145,7 @@ jobs:
         project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
         working_directory: ${{ github.workspace }}
         deliverables: app-dev.yaml
+        version: ctb-dev
         flags: "--verbosity=debug --service-account=${{ secrets.SA_DEPLOYER}}"
       
       
