--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -142,7 +142,7 @@ jobs:
       with:
         project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
         working_directory: ${{ github.workspace }}
-        deliverables: app-dev.yaml
+        # deliverables: app-dev.yaml
         version: ctb-dev
         flags: "--verbosity=debug --service-account=${{ secrets.SA_DEPLOYER}}"
       
