add empty app.yml

--- a/app-dev.yaml
+++ b/app-dev.yaml
@@ -19,18 +19,18 @@ env: flex
 service: default
 api_version: 1
 
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 1
+# automatic_scaling:
+#   min_num_instances: 1
+#   max_num_instances: 1
   
-resources:
-  cpu: 1
-  memory_gb: 3.5
-  disk_size_gb: 10
+# resources:
+#   cpu: 1
+#   memory_gb: 3.5
+#   disk_size_gb: 10
 
-builtins:
-- appstats: on
-- deferred: on
+# builtins:
+# - appstats: on
+# - deferred: on
 
 # beta_settings:
 #     cloud_sql_instances: 
