--- a/app-dev.yaml
+++ b/app-dev.yaml
@@ -35,6 +35,11 @@ builtins:
 # beta_settings:
 #     cloud_sql_instances: 
 
+network:
+  name: ctb-redis-network
+  subnetwork_name: subnet-03
+  
+
 env_variables:
   DJANGO_SETTINGS_MODULE: 'ctb.settings'
 
