--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -58,6 +58,6 @@ jobs:
       with:
         project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
         working_directory: ${{ github.workspace }}
-        deliverables: app-dev.yaml
+        deliverables: app-dev.yml
         version: ctb-dev-01
         flags: "--verbosity=debug --service-account=${{ secrets.SA_DEPLOYER}}"
