add static file handlers

--- a/app-dev.yaml
+++ b/app-dev.yaml
@@ -53,3 +53,17 @@ skip_files:
 - ^google_appengine\.zip$
 - ^(.*/)?.*\.sql$
 - ^venv/.*$
+
+
+handlers:
+  - url: /favicon\.ico
+    static_files: favicon.ico
+    upload: favicon\.ico
+
+  - url: /static
+    static_dir: public
+
+  - url: /.*
+    secure: always
+    redirect_http_response_code: 301
+    script: auto
