fix static dir location

--- a/app-dev.yaml
+++ b/app-dev.yaml
@@ -61,7 +61,7 @@ handlers:
     upload: favicon\.ico
 
   - url: /static
-    static_dir: public
+    static_dir: static
 
   - url: /.*
     secure: always
