--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,8 @@ django-session-security==2.6.5
 django-anymail
 django-axes==5.20.0
 django-redis==5.0.0
-xhtml2pdf==0.2.15
+xhtml2pdf==0.2.16
+gunicorn==22.0.0
 
 # If you are seeing an error about django-debug-toolbar not being installed,
 # the problem is almost certainly that your developer .env wasn't found
