modify app.yml file

--- a/app-dev.yaml
+++ b/app-dev.yaml
@@ -53,3 +53,11 @@ skip_files:
 - ^google_appengine\.zip$
 - ^(.*/)?.*\.sql$
 - ^venv/.*$
+
+handlers:
+  - url: /favicon\.ico
+    static_files: favicon.ico
+    upload: favicon\.ico
+
+  - url: /static
+    static_dir: static
