--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -37,11 +37,11 @@ jobs:
         workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER}}
         service_account: ${{ secrets.SA_DEPLOYER}}
 
-    - id: 'upload-file'
-      uses: 'google-github-actions/upload-cloud-storage@v2'
-      with:
-        path: static
-        destination: ${{secrets.CTB_DEV_STATIC_BUCKET}}
+    # - id: 'upload-file'
+    #   uses: 'google-github-actions/upload-cloud-storage@v2'
+    #   with:
+    #     path: static
+    #     destination: ${{secrets.CTB_DEV_STATIC_BUCKET}}
 
     - name: generate .env file
       uses: mobiledevops/secret-to-file-action@v1
