--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -1,29 +1,25 @@
 name: Build and Deploy
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
-      - isb-cgc-ctb-test
-      - isb-cgc-ctb-uat
-      - isb-cgc-ctb-prod
-      - actions
-
+      - "*_dev"
+      - "*_qa"
 
 env:
   TZ: America/New_York
 
 jobs:
- 
   deploy:
     permissions:
       contents: 'read'
       id-token: 'write'
     # needs: build
     runs-on: ubuntu-latest
+    environment: dev
 
     steps:
     - uses: actions/checkout@v3
-    
   
     # Set up Google Cloud SDK
     - name: Set up Google Cloud SDK
@@ -33,31 +29,20 @@ jobs:
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v1'  
       with:
-        project_id: ${{ secrets.GCP_DEV_PROJECT_ID}}
-        workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER}}
-        service_account: ${{ secrets.SA_DEPLOYER}}
-
-    # - id: 'upload-file'
-    #   uses: 'google-github-actions/upload-cloud-storage@v2'
-    #   with:
-    #     path: static
-    #     destination: ${{secrets.CTB_DEV_STATIC_BUCKET}}
+        project_id: ${{ secrets.PROJECT_ID }}
+        workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+        service_account: ${{ secrets.SERVICE_ACCOUNT }}
 
     - name: generate .env file
-      uses: mobiledevops/secret-to-file-action@v1
-      with:
-        base64-encoded-secret: ${{ secrets.CTB_DEV_SETTINGS }}
-        filename: ".env"
-        working-directory: "."
+      run: echo ${{ secrets.ENV_FILE }} > .env
 
     - id: 'deploy'
       uses: 'google-github-actions/deploy-appengine@v2'
-      
       env:
         CLOUDSDK_APP_CLOUD_BUILD_TIMEOUT: 1800 # 30 minutes
       with:
-        project_id:  ${{ secrets.GCP_DEV_PROJECT_ID}}
+        project_id:  ${{ secrets.PROJECT_ID }}
         working_directory: ${{ github.workspace }}
         deliverables: app-dev.yaml
         version: ctb-dev-08
-        flags: "--verbosity=debug --service-account=${{ secrets.SA_DEPLOYER}}"
+        flags: "--verbosity=debug --service-account=${{ secrets.SERVICE_ACCOUNT }}"
