--- a/.github/workflows/ctb.yml
+++ b/.github/workflows/ctb.yml
@@ -37,17 +37,23 @@ jobs:
     - id: "generate_app_yaml"
       name: "Generate app.yaml"
       run: envsubst < app.template.yaml > app.yaml
+      env:
+        VPC: ${{ secrets.VPC }}
+        SUBNET: ${{ secrets.SUBNET }}
 
     - name: generate .env file
       run: echo "${{ secrets.ENV_FILE }}" > .env
 
     - id: "deploy"
-      uses: 'google-github-actions/deploy-appengine@v2'
-      env:
-        CLOUDSDK_APP_CLOUD_BUILD_TIMEOUT: 1800 # 30 minutes
-      with:
-        project_id:  ${{ secrets.PROJECT_ID }}
-        working_directory: ${{ github.workspace }}
-        deliverables: app.yaml
+      name: "Deploy App"
+      run: gcloud app deploy app.yaml --project ${{ secrets.PROJECT_ID }} --promote --verbosity debug --service-account=${{ secrets.APP_SERVICE_ACCOUNT }}
+#    - id: "deploy"
+#      uses: 'google-github-actions/deploy-appengine@v2'
+#      env:
+#        CLOUDSDK_APP_CLOUD_BUILD_TIMEOUT: 1800 # 30 minutes
+#      with:
+#        project_id:  ${{ secrets.PROJECT_ID }}
+#        working_directory: ${{ github.workspace }}
+#        deliverables: app.yaml
 #        version: ctb-dev-08
-        flags: "--verbosity=debug --service-account=${{ secrets.APP_SERVICE_ACCOUNT }}"
+#        flags: "--verbosity=debug --service-account=${{ secrets.APP_SERVICE_ACCOUNT }}"
