--- a/app.template.yaml
+++ b/app.template.yaml
@@ -39,6 +39,9 @@ network:
   name: $VPC
   subnetwork_name: $SUBNET
 
+vpc_access_connector:
+  name: $VPC_ACCESS_CONNECTOR
+
 #env_variables:
 #  DJANGO_SETTINGS_MODULE: 'ctb.settings'
 
